--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "wct.conf.js"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.1.1"
+    "polymer": "Polymer/polymer#^1.1.1",
+    "dom-bindref": "~1.0.0"
   },
   "devDependencies": {
     "web-component-tester": "4.0.3",
