--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ dist: trusty
 language: node_js
 node_js: "5.3"
 addons:
-  firefox: 'latest'
   apt:
     sources:
       - google-chrome
@@ -20,5 +19,5 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 script:
-  - wct --local=chrome
+  - wct --local=chrome --expanded
 after_success: "cat ${TRAVIS_BUILD_DIR}/coverage/lcov.info | coveralls"
